# graph-reduction

./: CHANGELOG.md  LICENSE  README.md  graph-reduction.cabal
app/: Main.hs
src/: ElcDef.hs  ElcTranslator.hs  FlDef.hs  FlParser.hs  Lib.hs
test/: Main.hs  TestElcTranslator.hs  TestFlParser.hs  TestRunner.hs
